...
          <Text style={[styles.text, stylesHook.text]}>{loc.wallets.lightning_spark_backup_notice_other_app}</Text>
        </View>
        <View style={styles.bottomContainer}>
          <ThemedCheckbox text={loc.wallets.lightning_spark_backup_notice_confirm} onChanged={setIsAccepted} />
          <View style={styles.bottom}>
            <BlueButton
              testID="SparkBackupNoticeContinue"
              onPress={() => replace('WalletExport', { walletID, noticeAccepted: true })}
              disabled={!isAccepted}
              title={loc._.continue}
            />
          </View>
        </View>
...
